log/build_2024-06-23_14-09-33/db_broker/stderr.log
  File "/home/beachlbl/porter/ros2-ws-2024/install/db_broker/lib/python3.10/site-packages/db_broker/db_broker_pub.py", line 90
    client.publish(self.topic, {'message': 10}
                  ^
SyntaxError: '(' was never closed

